# zero2prod

./: Cargo.toml  README.md  configuration.yaml  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
